# puremote

./: README.md  pyproject.toml
config/: config.toml  default.json
doc/img/: architecture.smm
src/puremote/: __init__.py
src/puremote/common/: style_sheet.py
src/puremote/components/card/: base_card.py
src/puremote/components/config/: env_variable.py
src/puremote/components/plotter/: plotter_widget.py
src/puremote/components/plotter/backend/: plotter.py
src/puremote/components/plotter/dialog/: add_figure_dialog.py
src/puremote/components/session_monitor/: session_monitor_widget.py
src/puremote/components/trial_monitor/: data_monitor_widget.py
src/puremote/components/trial_monitor/data_view/: trial_data_view.py
src/puremote/components/trial_monitor/dialog/: add_trial_data_dialog.py
src/puremote/components/video_monitor/: video_monitor_widget.py
src/puremote/components/video_monitor/backend/: native.py  vlc_backend.py
src/puremote/components/video_monitor/dialog/: link_streaming_dialog.py  (+1 more)
src/puremote/config/: config.py
src/puremote/model/: trail_data.py
src/puremote/models/: trail_data.py
src/puremote/shared/: http_listener.py  http_listener_legacy.py  http_sse_listener_legacy.py  tcp_listener.py
src/puremote/tmp/: sse.py
src/puremote/ui/: data_monitor.py  data_table_view.py  dialog.py  gl_backend.py  main_view.py  monitor.py  plotter.py  plotter_widget.py  trial_data_view.py
src/puremote/ui/dialog/: dialog_legacy.py  plotter_dialog.py
src/puremote/views/: main_view.py
src/puremote/views/experiments_view/: experiments_view.py
