[project]
name = "puremote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "httpx-sse>=0.4.0",

    "httpx>=0.27.2",

    "loguru>=0.7.2",

    "matplotlib>=3.9.2",

    "opencv-python>=4.10.0.84",

    "pyopengl>=3.1.7",

    "pyside6-fluent-widgets>=1.7.1",

    "pyside6>=6.7.2",

    "python-vlc>=3.0.20123",

    "requests-sse>=0.3.2",

    "requests>=2.32.3",

    "rich>=13.8.1",

    "setuptools>=75.1.0",

    "sseclient>=0.0.27",

    "vidgear[core]>=0.3.3",
]

[project.scripts]
puremote = "puremote:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
